--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <article>
                 <img src="img/prod1.jpg" alt="producto 1">
 
+
             </article>
 
 
@@ -52,10 +53,14 @@
         </aside>
 
         <footer>
-       <section>
-
-       </section>
-       <p>C - Desarrollado por grupo 7: Juan Jose Chaparro, Maria Eugenia Losada</p>     
+        <section>
+            <h3>SEGUINOS EN REDES</h3>
+            <a></a>
+            <a></a>
+            <a></a>
+            <a></a>
+        </section>
+        <p>© - Desarrollado por grupo 7: Juan Jose Chaparro, Maria Eugenia Losada</p>     
         </footer>
     </body>
     
