--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <body>
         <header>
-            <img src="img/logo.png" alt="logo" title ="Logo de la compania J&E Indumentaria">
+            <img src="img/logo.png" alt="logo" title ="Logo de la compania J&E Indumentaria" href="index.html">
             <form action="busqueda.html" method="post">
                 <label for="in-busqueda">
                     <span class="material-symbols-outlined"> search </span>
@@ -22,7 +22,7 @@
                     required
                 >
             </form>
-            <a href="pagos.html" >
+            <a href="pagos.html" target="_blank">
                 <span style="color:black" class="material-symbols-outlined" >
                     shopping_cart
                 </span>
