--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </fieldset>
                     <label for="sel-talle">Talles disponibles:</label>
                     <select name="talle" id="sel-talle">
-                        <option selected value="">XS</option>
+                        <option selected value="XS">XS</option>
                         <option value="S" disabled>S</option>
                         <option value="M">M</option>
                         <option value="L">L</option>
@@ -179,7 +179,7 @@
                     </fieldset>
                     <label for="sel-talle">Talles disponibles:</label>
                     <select name="talle" id="sel-talle">
-                        <option selected value="">XS</option>
+                        <option selected value="XS">XS</option>
                         <option value="S">S</option>
                         <option value="M">M</option>
                         <option value="L">L</option>
