--- a/index.html
+++ b/index.html
@@ -195,40 +195,40 @@
 
         </main>
         <aside>
-            <h3>RECOMENDADOS OUTLET</h3>
+            <h2>RECOMENDADOS OUTLET</h2>
                 <table>
                     <tbody>
                         <!-- recomendado1 -->
                         <tr>
-                            <th style="border: 1px solid black;">$30000</th>
-                            <td rowspan="2" style="border: 1px solid black;"><a href="pagos.html"><img src="img/img4.png"></a></td>
+                            <th style=>$30000</th>
+                            <td rowspan="2"><a href="pagos.html"><img src="img/img4.png"></a></td>
                         </tr>
                         <tr>
-                            <th style="border: 1px solid black;">Zapatillas hombre</th>
+                            <th>Zapatillas hombre</th>
                         </tr>
                         <!-- recomendado2 -->
                         <tr>
-                            <th style="border: 1px solid black;">$25000</th>
-                            <td rowspan="2" style="border: 1px solid black;"><a href="pagos.html"><img src="img/img5.png"></a></td>
+                            <th>$25000</th>
+                            <td rowspan="2"><a href="pagos.html"><img src="img/img5.png"></a></td>
                         </tr>
                         <tr>
-                            <th style="border: 1px solid black;">Zapatillas dama</th>
+                            <th>Zapatillas dama</th>
                         </tr>
                         <!-- recomendado3 -->
                         <tr>
-                            <th style="border: 1px solid black;">$25000</th>
-                            <td rowspan="2" style="border: 1px solid black;"><a href="pagos.html"><img src="img/img6.png"></a></td>
+                            <th>$25000</th>
+                            <td rowspan="2"><a href="pagos.html"><img src="img/img6.png"></a></td>
                         </tr>
                         <tr>
-                            <th style="border: 1px solid black;">Zapatillas hombre</th>
+                            <th >Zapatillas hombre</th>
                         </tr>
                         <!-- recomendado4 -->
                         <tr>
-                            <th style="border: 1px solid black;">$25000</th>
-                            <td rowspan="2" style="border: 1px solid black;"><a href="pagos.html"><img src="img/img7.png"></a></td>
+                            <th>$25000</th>
+                            <td rowspan="2"><a href="pagos.html"><img src="img/img7.png"></a></td>
                         </tr>
                         <tr>
-                            <th style="border: 1px solid black;">Zapatillas hombre</th>
+                            <th">Zapatillas hombre</th>
                         </tr>
                     </tbody>
                 </table>
@@ -242,7 +242,9 @@
                 <a href="https://www.whatsapp.com"><img src="img/wapp.ico"></a>
                 <a href="https://www.youtube.com"><img src="img/yt.ico"></a>
             </section>
-            <p>© - Desarrollado por grupo 3: Juan Jose Chaparro, Maria Eugenia Losada</p>     
+            <section>
+                <p>© - Desarrollado por grupo 3: Juan Jose Chaparro, Maria Eugenia Losada</p>     
+            </section>
         </footer>
     </body>
     
